--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -1,9 +1,27 @@
-body {
-    position: relative;
-    padding-bottom: 3rem;
-    color: #5c5c5c;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-/* Navbar */
+
+body, html {
+    height: 100%;
+    color: #5c5c5c;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#main {
+    position: relative;
+    min-height: 100%;
+    padding-bottom: 200px;
+}
+
+.home-main {
+    width: 90%;
+    margin-left: 5%;
+}
+
+/* NAVBAR */
 .logo {
     width: 250px;
     height: auto;
@@ -17,17 +35,6 @@ body {
 
 ul {
     margin-bottom: 0 !important;
-}
-
-/* Footer */
-
-.footer-custom {
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    background-color: #dfeaff;
-    padding-top: 25px;
-    margin-top: 50px;
 }
 
 .product-container {
@@ -76,10 +83,21 @@ ul {
     max-width: 600px;
     margin: 0 auto;
 }
+
 /* products/index */
+.filter-title {
+    margin-bottom: 20px;
+}
+
 #categories {
-    background-color: #e0e0e0d8;
+    background-color: #ebebeb;
+    border: 1px #f1e4d8 solid;
     padding: 15px;    
+}
+
+/* product/show */
+.hr-product {
+    margin: 80px 0;
 }
 
 /* order/index */
@@ -99,9 +117,97 @@ ul {
     margin-top: 12px;
 }
 
+/* Footer */
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+    padding: 25px 0;
+}
+
+.responsives-col {
+    margin-top: 50px;
+}
+
+.p-under-logo-footer {
+    margin-top: 25px;
+}
+
+.footer-p-underline {
+    margin-bottom: 40px;
+    position: relative;
+    font-weight: bold;
+}
+
+.footer-p-underline:after {
+    position: absolute;
+    content: "";
+    background: grey;
+    width: 12%;
+    height: 1px;
+    left: 0;
+    bottom: -20px;
+}
+
+.btn-footer {
+    color: #5c5c5c;
+    text-decoration: none;
+    border: 1px solid;
+    border-radius: 43px;
+    font-size: 13px;
+    padding: 7px 30px;
+    line-height: 47px;
+}
+
+.btn-footer:hover {    
+    text-decoration: none;
+    background-color: #f1e4d8;
+    color: #5c5c5c !important;
+}
+
+.social img {
+    margin-bottom: 25px;
+}
+
+footer ul li {
+    list-style: none;
+    display: block;
+}
+
+footer ul  {
+    padding-left: 0;
+}
+
+footer ul li a {
+    text-decoration: none;
+    color: grey;
+    text-decoration:none;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #f5f5f5 !important; 
+}
+
 /* Change the size of the site's containers */
 @media (min-width: 992px) {
     .container, .container-lg, .container-md, .container-sm {
         max-width: 1300px !important;
+    }
+
+    .home-main {
+        max-width: 1300px !important;
+        margin: auto;
+    }
+
+    /* FOOTER */
+    .logo-part {
+        border-right: 1px solid grey;
+        height: 100%;
+    }
+
+    .responsives-col {
+        margin-top: 0;
     }
 }
