--- a/public/assets/css/navBar.css
+++ b/public/assets/css/navBar.css
@@ -18,6 +18,7 @@ header {
     margin: 0 auto;
     display: flex;
     position: relative;
+    height: 50px;
 }
 
 .nav-btn {
@@ -35,70 +36,34 @@ header {
     align-items: center;
 }
 
-.nav-link {
-    position: relative;
-}
-
-.nav-link > a {
-    color: #5c5c5c;
-    padding-right: 1.5rem;
+.nav-link  a,
+.navbar-item-custom a  {
+    color: var(--second-color);
     letter-spacing: 1px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    transition: .4s;
     text-decoration: none;
+    position: relative;
+    padding: 0 10px;
 }
 
-.nav-link:hover > a {
-    transform: scale(1.1);
-    color: #B99867;
-} 
-
-.dropdown {
+.nav-link a:after,
+.navbar-item-custom a:after  {
+    content: "";
     position: absolute;
-    top: 100%;
-    left: 0;
-    width: 10rem;
-    transform: translateY(10px);
-    opacity: 0;
-    pointer-events: none;
-    transition: .4s;
+    width: 0;
+    height: 1px;
+    left: 25%;
+    bottom: -10px;
+    background:var(--second-color);
+    transition: 0.3s; 
 }
 
-.dropdown ul {
-    position: relative;
-}
-
-.dropdown-link a {
-    display: flex;
-    background-color: #2D4655;
-    opacity: 0.7;
-    color: #fff;
-    padding: .5rem 1rem;
-    font-size: 1.2rem;
-    align-items: center;
-    justify-content: space-between;
-    text-decoration: none;
-}
-
-.dropdown-link:hover a {
-    background-color: #2D4655;
-    color: #B99867;
-    transform: scale(1.1);
-    transition: .4s ease-in-out;
-}
-
-.dropdown-link {
-    position: relative;
+.nav-link> a:hover:after ,
+.navbar-item-custom a:hover:after {
+    width: 50%;
 } 
- 
-.nav-link:hover > .dropdown,
-.dropdown-link:hover > .dropdown{
-    transform: translate(0, 0);
-    opacity: 1;
-    pointer-events: auto;
-}
 
 .hamburger-menu-container {
     flex: 1;
@@ -169,7 +134,6 @@ header {
     transform: translateY(0) rotate(45deg);
 }
 
-
 @keyframes animation {
     from {
         opacity: 0;
@@ -180,7 +144,7 @@ header {
         transform: translateY(0px);
     }
 }
-
+ 
 @media (max-width: 920px) {
     header {
         position: sticky;
@@ -208,7 +172,7 @@ header {
     }
 
     .nav-links-ul {
-        margin-top: 4rem;
+        margin-top: 10rem;
     }
 
     .logo-a {
@@ -247,7 +211,6 @@ header {
 
     .nav-links > ul {
         flex-direction: column;
-
     }
 
     .nav-link {
@@ -264,26 +227,13 @@ header {
         font-size: 20px;
         text-decoration: none;
     }
-
-    .nav-link:hover > a {
-        transform: scale(1);
-        background-color: #2D4655;
-    } 
-
-
-    .nav-link:hover > .dropdown,
-    .dropdown-link:hover > .dropdown {
-        display: block;
-    }
-
-    .nav-link:hover > a > i,
-    .dropdown-link:hover > a > i {
-        transform: rotate(360deg);
-    }
-
-    .nav-link > a > i {
-        font-size: 1.1rem;
-        transform: rotate(-90deg);
-        transition: .7s;
+    .nav-link > .navbar-item-custom > a {
+        display: flex;
+        color: #5c5c5c;
+        line-height: 1;
+        padding: 1.3rem 2rem;
+        justify-content: center;
+        font-size: 20px;
+        text-decoration: none;
     }
 } 
