--- a/templates/products/show.html.twig
+++ b/templates/products/show.html.twig
@@ -22,7 +22,7 @@
 			<a href="{{ path('add_to_cart', {'id': product.id }) }}"><button class="button arrow">Ajouter au panier</button></a>
 		</div>
 	</div>
-	<hr>
+	<hr class="hr-product">
 
 	<p>Retrouvez les tendances du moment</p>
     <div class="row">
@@ -39,5 +39,3 @@
     </div>
 
 {% endblock %}
-
-
