--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inscription - La Broudoute{% endblock %}
 
 {% block content %}
-    <div class="block-small">
+    <div class="register-form-container">
         <h1>Inscription</h1>
 
         {{ form(form)}}
