--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -1,4 +1,10 @@
-* {
+:root{
+    --main-color: #f1e4d8;
+    --second-color : #5c5c5c;
+    --third-color : #f3f3f3;
+}
+
+*, *:before, *:after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,7 +12,7 @@
 
 body, html {
     height: 100%;
-    color: #5c5c5c;
+    color: var(--second-color);
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -38,7 +44,7 @@ ul {
 }
 
 .product-container {
-    margin-bottom: 120px;
+    margin-bottom: 50px;
 }
 
 .product-item {
@@ -79,10 +85,17 @@ ul {
 }
 
 /* login.html.twig && register/index */
-.block-small {
+.login-form-container {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+.register-form-container {
     max-width: 600px;
     margin: 0 auto;
 }
+
 
 /* products/index */
 .filter-title {
@@ -90,8 +103,8 @@ ul {
 }
 
 #categories {
-    background-color: #ebebeb;
-    border: 1px #f1e4d8 solid;
+    background-color: #f3f3f3;
+    border: 1px solid var(--main-color);
     padding: 15px;    
 }
 
@@ -102,17 +115,54 @@ ul {
 
 /* order/index */
 /* cf orderType*/
+.order-form-container {
+    margin: auto;
+    text-align: center;
+}
+
 .order-form {
-    background-color: #f4f8ff;
-    padding: 20px 65px;    
+    background-color: var(--third-color);
+    padding: 20px 65px;
+    border-bottom: 1px solid #000;
+}
+
+.add-new-adress-link {
+    margin: auto;
+    border:1px solid var(--second-color);
+    padding: 5px 0;
+    margin-bottom: 50px;
+}
+
+.add-new-adress-link:hover {
+    background-color: #f1e4d8;    
+}
+
+.add-new-adress-link a{
+    color:var(--second-color);
+}
+
+.add-new-adress-link a:hover {
+    color:var(--second-color) !important;
 }
 
 .col-form-label {
     font-weight: bold;
 }
 
+/* order/add */
+
+.order-form-recap-title {
+    text-align: center;
+    font-weight: bold;
+}
+.order-form-recap {
+    background-color: var(--third-color);
+    padding: 20px;
+    margin-top: 12px;
+}
+
 .order-summary {
-    background-color: #f4f8ff;
+    background-color: var(--third-color);
     padding: 20px;
     margin-top: 12px;
 }
@@ -151,7 +201,7 @@ footer {
 }
 
 .btn-footer {
-    color: #5c5c5c;
+    color: var(--second-color);
     text-decoration: none;
     border: 1px solid;
     border-radius: 43px;
@@ -162,8 +212,8 @@ footer {
 
 .btn-footer:hover {    
     text-decoration: none;
-    background-color: #f1e4d8;
-    color: #5c5c5c !important;
+    background-color: var(--main-color);
+    color: var(--second-color) !important;
 }
 
 .social img {
@@ -185,9 +235,9 @@ footer ul li a {
     text-decoration:none;
 }
 
-a:hover {
+footer a:hover {
     text-decoration: none;
-    color: #f5f5f5 !important; 
+    color: var(--second-color) !important; 
 }
 
 /* Change the size of the site's containers */
@@ -199,6 +249,26 @@ a:hover {
     .home-main {
         max-width: 1300px !important;
         margin: auto;
+    }
+
+    /* order/index */
+    .order-form-container {
+        width: 100%;
+    }
+
+    .order-form-container hr{
+        width:50%;
+        margin: auto;
+        padding-bottom: 25px;
+    }
+
+    .order-form {
+        width: 50%; 
+        margin: auto;
+    }
+
+    .add-new-adress-link {
+        width: 50%;
     }
 
     /* FOOTER */
