--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,17 +22,17 @@
     </div>
 
     <!-- FEATURETTE -->
-    <div class="home-presentation ">
+    <div class="home-presentation">
         <div class="col-md-6 img-large-container">
             <img src="{{ asset('assets/pictures/home-img-large.png') }}" class="img-large img-fluid mx-auto " alt="image">
         </div>
         <div class="col-md-6">
             <img src="{{ asset('assets/pictures/logo-broudoute2.png') }}" class="img-small img-fluid mx-auto" alt="logo">
             <hr>
-            <p class="lead">
-                Des produits pas forcément utiles, enfin, peut être, des fois un peu, ca dépend du moment,<br>
-                après, est-ce vraiment différent de ce que l'on trouve ailleurs ? Et puis c'est votre argent, alors pourquoi pas
-                se faire plaisir, on n'a qu'une vie après tout bordel
+            <p>
+                "Des produits pas forcément utiles, enfin, peut être, des fois un peu, ca dépend du moment,
+                après, est-ce vraiment différent de ce que l'on trouve ailleurs ? <br>Et puis c'est votre argent, alors pourquoi pas
+                se faire plaisir, on n'a qu'une vie après tout bordel."
             </p>
         </div>
     </div>
