--- a/templates/home/navBar.html.twig
+++ b/templates/home/navBar.html.twig
@@ -23,17 +23,14 @@
                     <li class="nav-link" style="--i: 1.35s">
                         <div class="navbar-item-custom">
                             {% if is_granted('ROLE_USER') %} 
-                                <a href="{{ path('account')}}">Mon compte <small>({{ app.user.firstname }})</small></a> | <a href="{{ path('app_logout')}}">Déconnexion</a>
+                                <a class="" href="{{ path('account')}}">Mon compte ({{ app.user.firstname }})</a>
                             {% else %}
-                                <a href="{{ path('app_login')}}">Connexion </a> | <a href="{{ path('register')}}">inscription</a>
+                                <a href="{{ path('app_login')}}">Mon compte </a>
                             {% endif %}
                         </div>
-
                     </li>
                     <li class="nav-link" style="--i: 1.35s">
-                        <a href="{{ path('cart') }}">
-                            <img src="{{ asset('assets/pictures/shopping-cart.png') }}" class="cart-icone" alt="mon panier">
-                        </a>
+                        <a href="{{ path('cart') }}">Mon panier</a>
                     </li>
                 </div>
                 </ul>
@@ -43,7 +40,7 @@
         <div class="hamburger-menu-container">
             <div class="hamburger-menu">
                 <div></div>
-                    <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/b1.png') }}" class="hamburger-logo" alt="logo-la-broudoute"></a>
+                    <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo-broudoute.png') }}" class="hamburger-logo" alt="logo-la-broudoute"></a>
             </div>
         </div>
     </nav>
