--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -13,12 +13,11 @@
             <div class="order-form-recap mt-2">
                 {{ delivery|raw }}
             </div>
-            <hr>
             <p class="order-form-recap-title">Mon transporteur</p>
             <div class="order-form-recap">
                 {{ carrier.name }}<br>
                 {{ carrier.description }}<br>
-                {{ (carrier.price)|number_format(2, ',', '.') }} €
+                {{ (carrier.price / 100)|number_format(2, ',', '.') }} €
             </div>
         </div>
         <div class="col-md-6">
@@ -30,7 +29,7 @@
                         <div class="col-3 my-auto">
                             <img src="/uploads/{{ product.product.illustration }}" alt="{{ product.product.name }}" height="75px">
                         </div> 
-                        <div class="col-7"> 
+                        <div class="col-6"> 
                             {{ product.product.name }}<br>
                             <small>
                                 {{ product.product.subtitle }}
@@ -38,22 +37,20 @@
                                 X {{ product.quantity }}
                             </small>
                         </div>
-                        <div class="col-2 my-auto">
+                        <div class="col-3 my-auto">
                             {{ (product.product.price * product.quantity / 100) | number_format(2, ',', '.') }} €
                         </div>
                     </div>
                     {% set total = total + (product.product.price * product.quantity) %}
                 {% endfor %}
             </div>
-
-            <hr>
+            
             <strong>Sous-total : </strong>{{ (total / 100)|number_format(2, ',', '.') }} € <br>         {# At each iteration, total + (price * quantity) #}
-            <strong>Livraison : </strong>{{ (carrier.price)|number_format(2, ',', '.') }} € 
+            <strong>Livraison : </strong>{{ (carrier.price / 100)|number_format(2, ',', '.') }} € 
             <hr>
-            <strong>Total : </strong>{{ ((total / 100)+ carrier.price)|number_format(2, ',', '.') }} € <br>
-
-            <a href="" class="btn button arrow float-right mt-3">Payer | {{ ((total / 100)+ carrier.price)|number_format(2, ',', '.') }} €</a>
+            <strong>Total : </strong>{{ ((total / 100)+ (carrier.price / 100))|number_format(2, ',', '.') }} € <br>
+        
+            <a href="{{ path('stripe_create_session',{'reference':reference}) }}" class="btn button arrow mt-3" id="checkout-button">Payer | {{ (((total)/100) + (carrier.price / 100))|number_format(2,',', '.') }}€</a>
         </div>
     </div>
 {% endblock %}
- 
