--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -60,8 +60,7 @@
         <hr>
         <div class="text-right mb-5">
            <a href="{{ path('order') }}" class="btn"><button class="button arrow">Valider mon panier</button></a>
-        <div class="text-right mb-5">
-
+        </div>
     {% else %}
         <hr>
         <p><b>Votre panier est vide</b></p>
