--- a/templates/home/navBar.html.twig
+++ b/templates/home/navBar.html.twig
@@ -18,7 +18,7 @@
                         <a href="#">Qui sommes-nous</a>
                     </li>
                     <li class="nav-link" style="--i: 1.35s">
-                        <a href="#">contact</a>
+                        <a href="{{ path('contact')}}">contact</a>
                     </li>
                     <li class="nav-link" style="--i: 1.35s">
                         <div class="navbar-item-custom">
