modify design of the site

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -6,15 +6,38 @@
     <h1>Mon compte</h1>
     <p>
         Bienvenue {{ app.user.firstname }},<br>
-        vous retrouverez toutes vos informations perosnnelles dans cet espace.
+        vous retrouverez toutes vos informations personnelles dans cet espace.
     </p>
     <hr>
-    {% if is_granted('ROLE_ADMIN') %}           <!-- ROLE_ADMIN defined directly in Phpmyadmin -->
-        <a href="/admin">Accéder au backoffice en tant qu'administrateur</a><br>
-    {% endif %}
-    <a href="{{ path('account_password') }}">Modifier mon mot de passe</a><br>
-    <a href="{{ path('account_address') }}">Gérer mes adresses</a><br>
-    <a href="{{ path('account_order') }}">Mes commandes</a><br>
+    <div class="row">
+        {% if is_granted('ROLE_ADMIN') %}           <!-- ROLE_ADMIN defined directly in Phpmyadmin -->
+            <div class="col-md-3">
+                <div class="account-items">
+                        <a href="/admin">Accéder au backoffice administrateur</a>
+                </div>
+            </div>
+        {% endif %}
+
+        <div class="col-md-3">
+            <div class="account-items">
+                <img src="{{ asset('assets/pictures/password.png') }}" alt="Modifier mon mot de passe"><br>
+                <a href="{{ path('account_password') }}">Modifier mon mot de passe</a>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="account-items">
+                <img src="{{ asset('assets/pictures/address.png') }}" alt="Gérer mon adresse"><br>
+                <a href="{{ path('account_address') }}">Gérer mes adresses</a>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="account-items">
+                <img src="{{ asset('assets/pictures/purchase.png') }}" alt="Mes commandes"><br>
+                <a href="{{ path('account_order') }}">Mes commandes</a>
+            </div>
+        </div>
+    </div>
     <hr>
            <a href="{{ path('app_logout') }}"><button class="button arrow">Déconnexion</button></a>
 {% endblock %}
