--- a/templates/account/order.html.twig
+++ b/templates/account/order.html.twig
@@ -24,7 +24,7 @@
             <tbody>
                 {% for order in app.user.orders %}
                     <tr>
-                        <td>{{ order.createdAt|date('d/m/Y ') }}</td>
+                        <td>{{ order.createdAt|format_datetime() }}</td>
                         <td>{{ order.orderDetails|length }}</td>
                         <td>{{ ((order.carrierPrice + order.getTotal) / 100)|number_format(2,',','.')}} €</td>
                         <td class="text-right"><a href="{{path('account_order_show', { id : order.id }) }}">Voir ma commande</a></td>
