--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,7 +36,7 @@
                 </div>
             #}
 
-            <button class="btn button arrow" type="submit">
+            <button class="btn button arrow mt-5" type="submit">
                 Se connecter
             </button>
             <hr>
