--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -168,6 +168,29 @@ ul {
     margin-bottom: 20px;
 }
 
+/* contact/index */
+.contact-form-container {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+#contact_content.form-control {
+    height: 200px !important;
+}
+/* Account/index */
+.account-items {
+    background-color: var(--third-color);
+    padding: 20px;
+    text-align: center;
+    height: 200px;
+}
+
+.account-items a {
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
 /* Footer */
 footer {
     position: absolute;
