--- a/templates/order_validate/index.html.twig
+++ b/templates/order_validate/index.html.twig
@@ -3,19 +3,12 @@
 {% block title %}Confirmation de commande - La Broudoute{% endblock %}
 
 {% block content %}
-
     <div class="order-form-container">    
         <h2>Confirmation de commande</h2>
         <p>
-            Bonjour <strong>{{ order.user.firstname }} {{ order.user.lastname }}</strong>, <br>
-            Nous vous remercions pour votre commande.<br>
-            Une confirmation vient de vous être envoyé par email à l'adresse <strong>{{ order.user.email }}</strong>.
-            <hr>
-            Votre commande sera livrée par <strong>{{ order.carrierName }}</strong> à l'adresse suivante :<br>
-            {{ order.delivery|raw }}
+            Bonjour, nous vous remercions pour votre commande.
             <hr>
             Pour suivre votre commande, rendez-vous dans votre espace<a href="{{ path('account_order') }}"> "Mes commandes".</a>
         </p>
     </div>
-
 {% endblock %}
